# monorepo

./: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: e2e.yml  load-test.yml
backend/: .env.example
backend/docs/: BACKUP_RECOVERY.md  METRICS.md  METRICS_IMPLEMENTATION_SUMMARY.md  METRICS_QUICK_START.md
backend/migrations/: 007_job_scheduler.sql  008_webhook_replay.sql  025_property_photos.sql  025_tenant_documents.sql  026_landlord_payouts.sql  027_kyc_attempt_count.sql  028_onboarding_drafts.sql  029_inspection_jobs.sql  030_two_tier_pricing.sql  031_rent_guarantee_policies.sql  032_tenant_rating_card.sql  035_admin_rbac.sql  042_conversion_saga.sql
backend/scripts/: validate-metrics.sh
backend/src/: app.ts
contracts/: Cargo.toml
contracts/deployment/: README.md
contracts/docs/: events.md
contracts/epoch_rewards/: Cargo.toml
contracts/governance/: Cargo.toml
contracts/inspector_bond/: Cargo.toml
contracts/multisig_admin/: Cargo.toml
contracts/mvp_staking_pool/: Cargo.toml
contracts/rent_schedule/: Cargo.toml
contracts/rent_to_own/: Cargo.toml
contracts/rent_wallet/: README.md
contracts/scripts/: deploy-all.sh  deploy_all.sh  deploy_deal_escrow.sh  deploy_oracle_price_feeds.sh  deploy_rent_payments.sh  networks.sh  (+3 more)
contracts/whistleblower_rewards/: Cargo.toml
contracts/whistleblower_rewards/src/: upgrade_governance_tests.rs
docs/: A11Y_MANUAL_TEST_CHECKLIST.md
e2e/: playwright.config.ts
frontend/: PERFORMANCE_VALIDATION.md  REALTIME_VALIDATION.md  playwright.config.ts
load-tests/: README.md  config.js
(+357 files in other folders)
