[package]
name = "whistleblower_rewards"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-pausable = { version = "0.1.0", path = "../soroban_pausable" }
soroban-sdk = "22.0.7"

[dev-dependencies]
soroban-sdk = { version = "22.0.7", features = ["testutils"] }

